package edu.auburn.eng.csse.comp3710.spring2018.marshmellies;

import android.os.Bundle;
import android.support.v7.app.AppCompatActivity;
import android.view.View;

public class OptionsActivity extends AppCompatActivity {
    @Override
    protected void onCreate(Bundle savedInstanceBundle){
        super.onCreate(savedInstanceBundle);
        setContentView(R.layout.activity_options);
    }

    public void optionPreferences(View v){
        //change difficult based on radio button selected
        //Toggle Sound on/off
        //Preferences
        //unnecesarry change
    }
}
